# ProjetoTesteAgent

./: BUGS_CRIADOS.md  calculadora.py  calculadora.py.bak  package.json  pyproject.toml  test_calculadora.py  test_calculadora.py.bak
__pycache__/: calculadora.cpython-314.pyc.1703802959808  test_calculadora.cpython-314-pytest-9.0.3.pyc.3568
src/demo/: __init__.py  api_contract.py  architecture.py  calculator.py  legacy_service.py  primary_service.py  runtime.py
tests/: test_api_contract.py  test_architecture.py  test_calculator.py  test_runtime.py
web/: actions.mjs  actions.test.mjs
